--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   smooth_page_indicator: ^1.2.1
   supabase_flutter: ^2.10.3
   image_picker: ^1.2.0
+  motion_tab_bar: ^2.0.4
+  flutter_localization: ^0.3.3
   
 
 dev_dependencies:
