--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   image_picker: ^1.2.0
   motion_tab_bar: ^2.0.4
   flutter_localization: ^0.3.3
+  chat_bubbles: ^1.6.0
   
 
 dev_dependencies:
